Fixed Overlapping Display Container Issue

--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@
 
 .main-container {
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    flex-direction: row;
+    height: 100vh;
     background-color: light-grey;
 }
 
@@ -99,19 +99,21 @@
 .resume-background {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    overflow: auto;
     width: 100%;
-    background-color: #f4f5f6;
     border-radius: 10px;
     padding: 20px 0px;
     background-color: #5f6269;
 }
 
 .resume-container {
-  height: auto;
+  display: flex;
+  flex-direction: column;
   max-width: 820px; 
   max-height: 1056px;
   margin: 0px auto; 
+  overflow: auto;
   padding: 10px; 
   padding-left: 30px;
   padding-right: 30px;
@@ -377,8 +379,8 @@ input {
 .input-sections-container {
     display: flex;
     gap: 2rem;
-    flex-direction: column;;
-    width: 100%;
+    flex-direction: column;
+    overflow: scroll;
     margin: 10px 0px;
     padding: 10px;
 }
